tests/wpt/tests/third_party/test262/test/language/module-code/parse-err-decl-pos-import-generator-decl.js
// Copyright (C) 2016 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
features: [generators]
---*/

$DONOTEVALUATE();

function* g() { import v from './decl-pos-import-generator-decl.js'; }
